--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
+ 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Pokémon</title>
-	<link rel="stylesheet" href="./main.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Newsbox - Home</title>
+    <link rel="stylesheet" href="./main.css">
     <script src="./main.js" defer></script>
 </head>
+ 
 <body>
-    <form class="nameForm">
-        <p>Hej <span class="name"></span></p>
-        <label for="">
-            Skriv dit navn: <input type="text" name="nameInput">
-        </label>
-        <button type="submit">Gem</button>
-    </form>
-    <div class="hentoggem"></div>
+    <div id="wrapper">
+        <header class="main__header">
+            <a href=""><img class="header__archive" src="" alt="Archive"></a>
+ 
+            <h2 class="header__Title">Newsbox</h2>
+ 
+            <a href=""><img class="header__settings" src="" alt="Settings"></a>
+        </header>
+        <section class="search">
+            <input class="search__bar" type="search" placeholder="Search news" name="search__bar" id="">
+        </section>
+        <main class="main">
+            <section class="news">
+                <ul class="news__category__list"> UL 1
+                    <li class="news__category__items">
+                        <img class="news__category__items__thumbnail" src="" alt="thumbnail">
+                        <span class="news__category__links__container">
+                            <a class="news__category__links" href="#">NEW 1</a>
+                            <p class="news__category__links__text">Hey Cody, you should definetly check out Yoga Six for hot yoga! They have...
+                            </p>
+                        </span>
+                    </li>
+                    <li class="news__category__items">
+                        <img class="news__category__items__thumbnail" src="" alt="thumbnail">
+                        <span class="news__category__links__container">
+                            <a class="news__category__links" href="#">NEW 2</a>
+                            <p class="news__category__links__text">Hey Cody, you should definetly check out Yoga Six for hot yoga! They have...
+                            </p>
+                        </span>
+                    </li>
+                    <li class="news__category__items">
+                        <img class="news__category__items__thumbnail" src="" alt="thumbnail">
+                        <span class="news__category__links__container"><a class="news__category__links" href="#">NEW
+                                3</a>
+                            <p class="news__category__links__text">Hey Cody, you should definetly check out Yoga Six for hot yoga! They have...
+                            </p>
+                        </span>
+                    </li>
+                    <li class="news__category__items">
+                        <img class="news__category__items__thumbnail" src="images/placeholder.png" alt="thumbnail">
+                        <span class="news__category__links__container"><a class="news__category__links" href="#">NEW
+                                4</a>
+                            <p class="news__category__links__text">Hey Cody, you should definetly check out Yoga Six for hot yoga! They have...
+                            </p>
+                        </span>
+                    </li>
+                </ul>
+ 
+                <ul class="news__category__list"> UL 2
+                    <li class="news__category__items">
+                        <img class="news__category__items__thumbnail" src="images/placeholder.png" alt="thumbnail">
+                        <span class="news__category__links__container">
+                            <a class="news__category__links" href="#">NEW 5</a>
+                            <p class="news__category__links__text">Hey Cody, you should definetly check out Yoga Six for hot yoga! They have...
+                            </p>
+                        </span>
+                        <span class="news__category__links__archive"><img src="images/archive-icon.png"
+                                alt="Archive the link"></span>
+                    </li>
+                    <li class="news__category__items">
+                        <img class="news__category__items__thumbnail" src="images/placeholder.png" alt="thumbnail">
+                        <span class="news__category__links__container">
+                            <a class="news__category__links" href="#">NEW 6</a>
+                            <p class="news__category__links__text">Hey Cody, you should definetly check out Yoga Six for hot yoga! They have...
+                            </p>
+                        </span>
+                        <span class="news__category__links__archive"><img src="images/archive-icon.png"
+                                alt="Archive the link"></span>
+                    </li>
+                    <li class="news__category__items">
+                        <img class="news__category__items__thumbnail" src="images/placeholder.png" alt="thumbnail">
+                        <span class="news__category__links__container"><a class="news__category__links" href="#">NEW
+                                7</a>
+                            <p class="news__category__links__text">Hey Cody, you should definetly check out Yoga Six for hot yoga! They have...
+                            </p>
+                        </span>
+                        <span class="news__category__links__archive"><img src="images/archive-icon.png"
+                                alt="Archive the link"></span>
+                    </li>
+                    <li class="news__category__items">
+                        <img class="news__category__items__thumbnail" src="images/placeholder.png" alt="thumbnail">
+                        <span class="news__category__links__container"><a class="news__category__links" href="#">NEW
+                                8</a>
+                            <p class="news__category__links__text">Hey Cody, you should definetly check out Yoga Six for hot yoga! They have...
+                            </p>
+                        </span>
+                        <span class="news__category__links__archive"><img src="images/archive-icon.png"
+                                alt="Archive the link"></span>
+                    </li>
+                </ul> 
+ 
+            </section>
+        </main>
+        <footer class="footer">
+        </footer>
+    </div> <!--Wrapper End-->
 </body>
+ 
 </html>
+ 
