--- a/src/index.html
+++ b/src/index.html
@@ -11,31 +11,32 @@
  
 <body>
     <div id="wrapper">
-        <header class="main__header">
-            <a href=""><img class="header__archive" src="" alt="Archive"></a>
+        <header class="header">
+            <a href=""><img class="header__archive" src="images/Arrow_Left.png" alt="Archive"></a>
  
             <h2 class="header__Title">Newsbox</h2>
  
-            <a href=""><img class="header__settings" src="" alt="Settings"></a>
+            <a href=""><img class="header__settings" src="images/Setting_icon.png" alt="Settings"></a>
         </header>
         <section class="search">
             <input class="search__bar" type="search" placeholder="Search news" name="search__bar" id="">
         </section>
         <main class="main">
             <section class="news">
-                <ul class="news__category__list"> UL 1
+                <ul class="news__category__list"> Sport 
                     <li class="news__category__items">
                         <img class="news__category__items__thumbnail" src="" alt="thumbnail">
                         <span class="news__category__links__container">
-                            <a class="news__category__links" href="#">NEW 1</a>
+                            <a class="news__category__links" href="#">Headline</a>
                             <p class="news__category__links__text">Hey Cody, you should definetly check out Yoga Six for hot yoga! They have...
                             </p>
                         </span>
                     </li>
+                    <ul class="news__category__list"> Travel 
                     <li class="news__category__items">
                         <img class="news__category__items__thumbnail" src="" alt="thumbnail">
                         <span class="news__category__links__container">
-                            <a class="news__category__links" href="#">NEW 2</a>
+                            <a class="news__category__links" href="#">Headline</a>
                             <p class="news__category__links__text">Hey Cody, you should definetly check out Yoga Six for hot yoga! They have...
                             </p>
                         </span>
@@ -49,7 +50,7 @@
                         </span>
                     </li>
                     <li class="news__category__items">
-                        <img class="news__category__items__thumbnail" src="images/placeholder.png" alt="thumbnail">
+                        <img class="news__category__items__thumbnail" src="" alt="thumbnail">
                         <span class="news__category__links__container"><a class="news__category__links" href="#">NEW
                                 4</a>
                             <p class="news__category__links__text">Hey Cody, you should definetly check out Yoga Six for hot yoga! They have...
@@ -60,43 +61,43 @@
  
                 <ul class="news__category__list"> UL 2
                     <li class="news__category__items">
-                        <img class="news__category__items__thumbnail" src="images/placeholder.png" alt="thumbnail">
+                        <img class="news__category__items__thumbnail" src="" alt="thumbnail">
                         <span class="news__category__links__container">
                             <a class="news__category__links" href="#">NEW 5</a>
                             <p class="news__category__links__text">Hey Cody, you should definetly check out Yoga Six for hot yoga! They have...
                             </p>
                         </span>
-                        <span class="news__category__links__archive"><img src="images/archive-icon.png"
+                        <span class="news__category__links__archive"><img src=""
                                 alt="Archive the link"></span>
                     </li>
                     <li class="news__category__items">
-                        <img class="news__category__items__thumbnail" src="images/placeholder.png" alt="thumbnail">
+                        <img class="news__category__items__thumbnail" src="" alt="thumbnail">
                         <span class="news__category__links__container">
                             <a class="news__category__links" href="#">NEW 6</a>
                             <p class="news__category__links__text">Hey Cody, you should definetly check out Yoga Six for hot yoga! They have...
                             </p>
                         </span>
-                        <span class="news__category__links__archive"><img src="images/archive-icon.png"
+                        <span class="news__category__links__archive"><img src=""
                                 alt="Archive the link"></span>
                     </li>
                     <li class="news__category__items">
-                        <img class="news__category__items__thumbnail" src="images/placeholder.png" alt="thumbnail">
+                        <img class="news__category__items__thumbnail" src="" alt="thumbnail">
                         <span class="news__category__links__container"><a class="news__category__links" href="#">NEW
                                 7</a>
                             <p class="news__category__links__text">Hey Cody, you should definetly check out Yoga Six for hot yoga! They have...
                             </p>
                         </span>
-                        <span class="news__category__links__archive"><img src="images/archive-icon.png"
+                        <span class="news__category__links__archive"><img src=""
                                 alt="Archive the link"></span>
                     </li>
                     <li class="news__category__items">
-                        <img class="news__category__items__thumbnail" src="images/placeholder.png" alt="thumbnail">
+                        <img class="news__category__items__thumbnail" src="" alt="thumbnail">
                         <span class="news__category__links__container"><a class="news__category__links" href="#">NEW
                                 8</a>
                             <p class="news__category__links__text">Hey Cody, you should definetly check out Yoga Six for hot yoga! They have...
                             </p>
                         </span>
-                        <span class="news__category__links__archive"><img src="images/archive-icon.png"
+                        <span class="news__category__links__archive"><img src=""
                                 alt="Archive the link"></span>
                     </li>
                 </ul> 
