--- a/src/index.html
+++ b/src/index.html
@@ -23,21 +23,21 @@
         </section>
         <main class="main">
             <section class="news">
-                <ul class="news__category__list"> Sport 
+                <ul class="news__category__list"> Health
                     <li class="news__category__items">
                         <img class="news__category__items__thumbnail" src="" alt="thumbnail">
                         <span class="news__category__links__container">
                             <a class="news__category__links" href="#">Headline</a>
-                            <p class="news__category__links__text">Hey Cody, you should definetly check out Yoga Six for hot yoga! They have...
+                            <p class="news__category__links__text">Surfing is surface water sport in which the wave rider, referred to as...
                             </p>
                         </span>
                     </li>
-                    <ul class="news__category__list"> Travel 
+                    <ul class="news__category__list"> Sport 
                     <li class="news__category__items">
                         <img class="news__category__items__thumbnail" src="" alt="thumbnail">
                         <span class="news__category__links__container">
                             <a class="news__category__links" href="#">Headline</a>
-                            <p class="news__category__links__text">Hey Cody, you should definetly check out Yoga Six for hot yoga! They have...
+                            <p class="news__category__links__text">Surfing is surface water sport in which the wave rider, referred to as...
                             </p>
                         </span>
                     </li>
