--- a/src/settings.html
+++ b/src/settings.html
@@ -8,6 +8,17 @@
     <script src="./main.js" defer></script>
 </head>
 <body>
+    <div id="wrapper">
+        <header class="header">
+            <a href=""><img class="header__archive" src="images/Arrow_Left.png" alt="Archive"></a>
+ 
+            <h2 class="header__Title">Newsbox</h2>
+ 
+            <a href=""><img class="header__settings" src="images/Setting_icon.png" alt="Settings"></a>
+        </header>
+        <section class="search">
+            <input class="search__bar" type="search" placeholder="Search news" name="search__bar" id="">
+        </section>
     
 </body>
 </html>
