--- a/src/settings.html
+++ b/src/settings.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./main.css">
     <script src="./main.js" defer></script>
     <title>News Settings</title>
   </head>
@@ -14,55 +14,55 @@
       <h1>Manage</h1>
       <h2>Categories</h2>
 
-      <div class="space-around">
-        <div class="toggle-container">
-          <div class="toggle-label">Europe</div>
-          <label class="toggle-switch">
+      <div class="space__around">
+        <div class="toggle__container">
+          <div class="toggle__label">Europe</div>
+          <label class="toggle__switch">
             <input type="checkbox" />
-            <span class="toggle-slider"></span>
+            <span class="toggle__slider"></span>
           </label>
         </div>
 
-        <div class="toggle-container">
-          <div class="toggle-label">Health</div>
-          <label class="toggle-switch">
+        <div class="toggle__container">
+          <div class="toggle__label">Health</div>
+          <label class="toggle__switch">
             <input type="checkbox" />
-            <span class="toggle-slider"></span>
+            <span class="toggle__slider"></span>
           </label>
         </div>
 
-        <div class="toggle-container">
-          <div class="toggle-label">Sport</div>
-          <label class="toggle-switch">
+        <div class="toggle__container">
+          <div class="toggle__label">Sport</div>
+          <label class="toggle__switch">
             <input type="checkbox" />
-            <span class="toggle-slider"></span>
+            <span class="toggle__slider"></span>
           </label>
         </div>
 
-        <div class="toggle-container">
-          <div class="toggle-label">Business</div>
-          <label class="toggle-switch">
+        <div class="toggle__container">
+          <div class="toggle__label">Business</div>
+          <label class="toggle__switch">
             <input type="checkbox" />
-            <span class="toggle-slider"></span>
+            <span class="toggle__slider"></span>
           </label>
         </div>
 
-        <div class="toggle-container">
-          <div class="toggle-label">Travel</div>
-          <label class="toggle-switch">
+        <div class="toggle__container">
+          <div class="toggle__label">Travel</div>
+          <label class="toggle__switch">
             <input type="checkbox" />
-            <span class="toggle-slider"></span>
+            <span class="toggle__slider"></span>
           </label>
         </div>
 
-        <div class="dark-mode-container">
-          <button class="dark-mode-button" onclick="toggleDarkMode()">
+        <div class="dark__mode__container">
+          <button class="dark__mode__button" onclick="toggleDarkMode()">
             Toggle Dark Mode
           </button>
         </div>
       </div>
 
-      <div class="fake-version">Version 4.8.15.16.23.42</div>
+      <div class="fake__version">Version 4.8.15.16.23.42</div>
     </div>
   </body>
 </html>
