--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
             <input class="search__bar" type="search" placeholder="Search news" name="search__bar" id="">
         </section>
         <main class="main">
-            <section class="news">
+            <div class="news__category__all__list">
                 <ul class="news__category__list"> Health
                     <li class="news__category__items">
                         <img class="news__category__items__thumbnail" src="" alt="thumbnail">
@@ -102,7 +102,7 @@
                     </li>
                 </ul> 
  
-            </section>
+            </div>
         </main>
         <footer class="footer">
         </footer>
