--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,9 @@
         <main class="main">
 
             <div class="news__category__all__list">
-                <ul class="news__category__list"> Health
-                    <li class="news__category__items">
+                <ul class="news__category__list">
+                    
+                    <!-- <li class="news__category__items">
                         <img class="news__category__items__thumbnail" src="" alt="thumbnail">
                         <span class="news__category__links__container">
                             <a class="news__category__links" href="#">Headline</a>
@@ -57,7 +58,7 @@
                             <p class="news__category__links__text">Hey Cody, you should definetly check out Yoga Six for hot yoga! They have...
                             </p>
                         </span>
-                    </li>
+                    </li> -->
                 </ul>
  
             </div>
