--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
 <body>
     <div id="wrapper">
         <header class="header">
-            <a href=""><img class="header__archive" src="images/Arrow_Left.png" alt="Archive"></a>
+            <a href="archive.html"><img class="header__archive" src="images/Arrow_Left.png" alt="Archive"></a>
  
             <h2 class="header__Title">Newsbox</h2>
  
-            <a href=""><img class="header__settings" src="images/Setting_icon.png" alt="Settings"></a>
+            <a href="settings.html"><img class="header__settings" src="images/Setting_icon.png" alt="Settings"></a>
         </header>
         <section class="search">
             <input class="search__bar" type="search" placeholder="Search news" name="search__bar" id="">
