--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Newsbox - Home</title>
     <link rel="stylesheet" href="./main.css">
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="./main.js" defer></script>
 </head>
  
@@ -24,42 +26,7 @@
         <main class="main">
 
             <div class="news__category__all__list">
-                <ul class="news__category__list">
-                    
-                    <!-- <li class="news__category__items">
-                        <img class="news__category__items__thumbnail" src="" alt="thumbnail">
-                        <span class="news__category__links__container">
-                            <a class="news__category__links" href="#">Headline</a>
-                            <p class="news__category__links__text">Surfing is surface water sport in which the wave rider, referred to as...
-                            </p>
-                        </span>
-                    </li>
-                    <ul class="news__category__list"> Sport 
-                    <li class="news__category__items">
-                        <img class="news__category__items__thumbnail" src="" alt="thumbnail">
-                        <span class="news__category__links__container">
-                            <a class="news__category__links" href="#">Headline</a>
-                            <p class="news__category__links__text">Surfing is surface water sport in which the wave rider, referred to as...
-                            </p>
-                        </span>
-                    </li>
-                    <li class="news__category__items">
-                        <img class="news__category__items__thumbnail" src="" alt="thumbnail">
-                        <span class="news__category__links__container"><a class="news__category__links" href="#">NEW
-                                3</a>
-                            <p class="news__category__links__text">Hey Cody, you should definetly check out Yoga Six for hot yoga! They have...
-                            </p>
-                        </span>
-                    </li>
-                    <li class="news__category__items">
-                        <img class="news__category__items__thumbnail" src="" alt="thumbnail">
-                        <span class="news__category__links__container"><a class="news__category__links" href="#">NEW
-                                4</a>
-                            <p class="news__category__links__text">Hey Cody, you should definetly check out Yoga Six for hot yoga! They have...
-                            </p>
-                        </span>
-                    </li> -->
-                </ul>
+                
  
             </div>
         </main>
