--- a/src/index.html
+++ b/src/index.html
@@ -1,39 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
- 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Newsbox - Home</title>
-    <link rel="stylesheet" href="./main.css">
-
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="./main.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <script src="./main.js" defer></script>
-</head>
- 
-<body>
-    <div id="wrapper">
-        <header class="header">
-            <a href="archive.html"><img class="header__archive" src="images/Arrow_Left.png" alt="Archive"></a>
- 
-            <h2 class="header__Title">Newsbox</h2>
- 
-            <a href="settings.html"><img class="header__settings" src="images/Setting_icon.png" alt="Settings"></a>
-        </header>
-        <section class="search">
-            <input class="search__bar" type="search" placeholder="Search news" name="search__bar" id="">
-        </section>
-        <main class="main">
+  </head>
 
-            <div class="news__category__all__list">
-                
- 
-            </div>
-        </main>
-        <footer class="footer">
-        </footer>
-    </div> <!--Wrapper End-->
-</body>
- 
+  <body>
+    <div id="wrapper">
+      <header class="header">
+        <a href="archive.html"> <img class="header__archive" src="images/Arrow_Left.png" alt="Archive"/></a>
+
+        <h2 class="header__Title">Newsbox</h2>
+
+        <a href="settings.html"><img class="header__settings" src="images/Setting_icon.png" alt="Settings"/></a>
+      </header>
+
+        <section class="search">
+
+        <input class="search__bar" type="search" placeholder="Search news" name="search__bar" id=""/>
+        </section>
+
+      <main class="main">
+        <div class="news__category__all__list"></div>
+      </main>
+      <footer class="footer"></footer>
+    </div> 
+  </body>
 </html>
- 
