--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,10 @@
         </section>
 
       <main class="main">
-        <div class="news__category__all__list"></div>
+
+        <div class="news__category__all__list">
+</div>
+
       </main>
       <footer class="footer"></footer>
     </div> 
