--- a/src/settings.html
+++ b/src/settings.html
@@ -10,6 +10,14 @@
 
 
   <body>
+    <header class="header">
+      <a href="index.html"> <img class="header__archive" src="images/Arrow_Left.png" alt="Archive"/></a>
+
+      <h2 class="header__Title">Newsbox</h2>
+
+      
+    </header>
+
     <div class="container">
       <h1>Manage</h1>
       <h2>Categories</h2>
